--- a/index.html
+++ b/index.html
@@ -1,1 +1,105 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="./style.css">
+
+  <script src="./js/jquery-3.7.1.min.js"></script>
+  
+  <title>Frontend Mentor | News homepage</title>
+
+</head>
+<body>
+  <nav>
+    <img src="./images/logo.svg" alt="logo" class="logo">
+    <div class="nav-links">
+      <a href="">Home</a>
+      <a href="">New</a>
+      <a href="">Popular</a>
+      <a href="">Trending</a>
+      <a href="">Categories</a>
+    </div>
+    <img src="./images/icon-menu.svg" alt="icon-menu" id="menu" class="menu">
+      <div class="nav-mobile">
+        <img src="./images/icon-menu-close.svg" alt="icon-menu-close" id="close" class="menu">
+        <div class="nav-mobile-links">
+          <a href="">Home</a>
+          <a href="">New</a>
+          <a href="">Popular</a>
+          <a href="">Trending</a>
+          <a href="">Categories</a>    
+        </div>
+      </div>
+  </nav>
+  <header>
+    <div>
+      <picture>
+        <source media="(max-width: 650px)" srcset="./images/image-web-3-mobile.jpg">
+        <img src="./images/image-web-3-desktop.jpg" alt="image-web-3-desktop">
+      </picture>
+      <div class="container">
+        <h1>The Bright Future of Web 3.0?</h1>
+        <div class="content">
+          <p>We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. But is it really fulfilling its promise?</p>
+          <button>READ MORE</button>
+        </div>
+      </div>
+    </div>
+    <div class="new">
+      <h2>New</h2>
+      <div>
+        <h3>Hydrogen VS Electric Cars</h3>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+      </div>
+      <hr>
+      <div>
+        <h3>The Downsides of AI Artistry</h3>
+        <p>What are the possible adverse effects of on-demand AI image generation?</p>
+      </div>
+      <hr>
+      <div>
+        <h3>Is VC Funding Drying Up?</h3>
+        <p>Private funding by VC firms is down 50% YOY. We take a look at what that means.</p>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <img src="./images/image-retro-pcs.jpg" alt="image-retro-pcs">
+      <div class="content">
+        <h2>01</h2>
+        <h3>Reviving Retro PCs</h3>
+        <p>What happens when old PCs are given modern upgrades?</p>
+      </div>
+    </div>
+    <div class="container">
+      <img src="./images/image-top-laptops.jpg" alt="image-top-laptops">
+      <div class="content">
+        <h2>02</h2>
+        <h3>Top 10 Laptops of 2022</h3>
+        <p>Our best picks for various needs and budgets.</p>
+      </div>
+    </div>
+    <div class="container">
+      <img src="./images/image-gaming-growth.jpg" alt="image-gaming-growth">
+      <div class="content">
+        <h2>03</h2>
+        <h3>The Growth of Gaming</h3>
+        <p>How the pandemic has sparked fresh opportunities.</p>
+      </div>
+    </div>
+  </main>
+
+  
+  <script src="./js/script.js"></script>
+</body>
+</html>
