--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +28,7 @@
       <a href="">Categories</a>
     </div>
     <img src="./images/icon-menu.svg" alt="icon-menu" id="menu" class="menu">
-      <div class="nav-mobile">
+      <div class="nav-mobile hidden">
         <img src="./images/icon-menu-close.svg" alt="icon-menu-close" id="close" class="menu">
         <div class="nav-mobile-links">
           <a href="">Home</a>
